test/tests/stages/9_functions/invalid_types/call_variable_as_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  return
  identifier(x)
  (
  )
  ;
  }
